--- a/Proj8/style.css
+++ b/Proj8/style.css
@@ -1,138 +1,110 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-
-:root {
-	--left-bg-color: rgba(87, 84, 236, 0.7);
-	--right-bg-color: rgba(43, 43, 43, 0.8);
-	--left-btn-hover-color: rgba(87, 84, 236, 1);
-	--right-btn-hover-color: rgba(28, 122, 28, 1);
-	--hover-width: 75%;
-	--other-width: 25%;
-	--speed: 500ms;
-}
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 
 * {
 	box-sizing: border-box;
 }
 
 body {
-	font-family: 'Roboto', sans-serif;
+	background-color: steelblue;
+	color: #fff;
+	font-family: 'Muli', sans-serif;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	height: 100vh;
 	overflow: hidden;
 	margin: 0;
 }
 
-h1 {
-	font-size: 4rem;
-	color: #fff;
-	position: absolute;
-	left: 50%;
-	top: 20%;
-	transform: translateX(-50%);
-	white-space: nowrap;
-}
-
 .container {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	background: #333;
+	background-color: rgba(0, 0, 0, 0.4);
+	padding: 20px 40px;
+	border-radius: 5px;
 }
 
-.split {
-	position: absolute;
-	width: 50%;
-	height: 100%;
-	overflow: hidden;
-	/* transition: width 0.5s ease; */
+.container h1 {
+	text-align: center;
+	margin-bottom: 30px;
 }
 
-.split.left {
-	left: 0;
-	background: url('ps.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-.split.right {
-	right: 0;
-	background: url('xbox.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
-.split.left::before {
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	background-color: var(--left-bg-color);
-}
-
-.split.right::before {
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	background-color: var(--right-bg-color);
+.container a {
+	text-decoration: none;
+	color: lightblue;
 }
 
 .btn {
-	position: absolute;
-	left: 50%;
-	top: 40%;
-	transform: translateX(-50%);
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	border: #fff solid 0.2rem;
-	padding: 1.5rem;
-	text-decoration: none;
+	cursor: pointer;
+	display: inline-block;
+	width: 100%;
+	padding: 15px;
+	font-family: inherit;
+	font-size: 16px;
+	border: 0;
+	border-radius: 5px;
+}
+
+.btn:focus {
+	outline: 0;
+}
+
+.btn:active {
+	transform: scale(0.98);
+}
+
+.text {
+	margin-top: 30px;
+}
+
+.form-control {
+	position: relative;
+	margin: 20px 0 40px;
+	width: 300px;
+}
+
+.form-control input {
+	background-color: transparent;
+	border: 0;
+	border-bottom: 2px #fff solid;
+	/* block 会 独占一行 */
+	display: block;
+	width: 100%;
+	padding: 15px 0;
+	font-size: 18px;
 	color: #fff;
-	font-weight: bold;
-	text-transform: uppercase;
-	width: 15rem;
+	position: relative;
+	z-index: 100;
 }
 
-.split.left .btn:hover {
-	background-color: var(--left-btn-hover-color);
-	border-color: var(--left-btn-hover-color);
+.form-control input:focus,
+.form-control input:valid {
+	outline: 0;
+	border-bottom-color: lightblue;
 }
 
-.split.right .btn:hover {
-	background-color: var(--right-btn-hover-color);
-	border-color: var(--right-btn-hover-color);
+.form-control label {
+	position: absolute;
+	top: 15px;
+	left: 0;
+	pointer-events: none;
 }
 
-.hover-left .left {
-	width: var(--hover-width);
+.form-control label span {
+	display: inline-block;
+	/* 这俩有啥用... */
+	font-size: 18px;
+	min-width: 5px;
+	transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
-
-.hover-left .right {
-	width: var(--other-width);
-}
-
-.hover-right .right {
-	width: var(--hover-width);
-}
-
-.hover-right .left {
-	width: var(--other-width);
-}
-
-.split.left,
-.split.right,
-.split.left::before,
-.split.right::before {
-	transition: all var(--speed) ease-in-out;
-}
-
-@media (max-width: 800px) {
-	h1 {
-		font-size: 2rem;
-		top: 30%;
-	}
-
-	.btn {
-		padding: 1.2rem;
-		width: 12rem;
-	}
+/* 
+.form-control input:focus + label span 选择器的作用是：
+当 .form-control 内的 <input> 元素获得焦点时，
+选择紧邻该 <input> 后的第一个 <label> 元素，
+并在该 <label> 内选择所有的 <span> 元素，
+对这些 <span> 应用定义的样式。
+*/
+.form-control input:focus + label span,
+.form-control input:valid + label span {
+	color: lightblue;
+	transform: translateY(-30px);
 }
